# cv-performance

./: .dockerignore  .env  .env.local  .env.tmpl  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  compose.yml  debug_message_format.py  docker-compose.local.yml  llm-worker.dockerfile  pyproject.toml  requirements.txt  run_processor_standalone.py  service.dockerfile  start.py  test_universal_system.py
.github/workflows/: build-docker-develop.yaml
app/: Dockerfile  main.py
app/core/: config.py  managers.py
app/cv/: exercise_processor.py  metrics_storage.py
app/cv/metrics/: dumbbell-arm-v2.json  dumbbell-arm.json  push-up-v2.json  squat-v2.json
app/cv/scratches/: exercise_analyzer.py  exercise_old.py  frame_processor.py  test.py
app/kafka_handlers/: consumer.py  producer.py  topic_manager.py
app/routers/: health.py
app/schemas/: performance.py
app/services/: feedback_manager.py  llm_analyzer.py  performance_service.py  quix_stream_processor.py  redis_buffer.py  universal_quality_processor.py
app/utils/: logger.py
researching/: README.md
researching/debug/: bridge_cv_to_performance.py  compact_monitor.py  cv_feedback_integration.py  debug_cv_data.py  monitor_coaching_results.py
researching/debug_utilities/: run_processor_standalone.py
researching/tests/v2_current/: test_1_squat_quality_assessment.py  test_2_pushup_quality_assessment.py
tests/: test_integration.py  test_redis_buffer.py
